[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name="radikoplaylist"
version="1.2.0"
description = "Accesses to radiko API, gets media playlist URL and built header for HTTP request to its URL."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
  # - dlint/DUO107.md at master · dlint-py/dlint
  #   https://github.com/dlint-py/dlint/blob/master/docs/linters/DUO107.md
  "defusedxml",
  # To parse m3u8 from radiko
  "m3u8",
  # To request to radiko
  "requests"
]
license = {file = "LICENSE"}
authors = [
  {name = "Master", email = "roadmasternavi@gmail.com"},
]
maintainers = [
  {name = "Master", email = "roadmasternavi@gmail.com"}
]
keywords = ["radikoplaylist"]
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Topic :: Software Development",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Internet",
  "Topic :: Internet :: WWW/HTTP",
  "Typing :: Typed"
]

[dependency-groups]
dev = [
  "bandit",
  "build",
  "bump-my-version",
  "cohesion",
  # The coverage==3.5.3 is difficult to analyze its dependencies by dependencies management tool,
  # so we should avoid 3.5.3 or lower.
  # - Command: "pipenv install --skip-lock" fails 
  #   since it tries to parse legacy package metadata and raise InstallError
  #   · Issue #5595 · pypa/pipenv
  #   https://github.com/pypa/pipenv/issues/5595
  "coverage>=3.5.4",
  # The dlint less than 0.14.0 limits max version of flake8.
  # - dlint/requirements.txt at 0.13.0 · dlint-py/dlint
  #   https://github.com/dlint-py/dlint/blob/0.13.0/requirements.txt#L1
  "dlint>=0.14.0",
  # To the docformatter load pyproject.toml settings:
  "docformatter[tomli]; python_version < '3.11'",
  "docformatter; python_version >= '3.11'",
  "dodgy",
  # The hacking depends flake8 ~=6.1.0 or ~=5.0.1 or ~=4.0.1.
  # We should avoid the versions that is not compatible with the hacking,
  # considering the speed of dependency calculation process
  "flake8!=6.0.0,!=5.0.0,>=4.0.1",
  # To replace E501 in pycodestyle with B950 in flake8-bugbear:
  # - Using Black with other tools - Black 25.1.0 documentation
  #   https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#bugbear
  "flake8-bugbear",
  # To use flake8 --radon-show-closures
  "flake8-polyfill",
  # To use pyproject.toml for Flake8 configuration
  "Flake8-pyproject",
  # Latest hacking depends on legacy version of flake8, and legacy hacking doesn't narrow flake8 version.
  # When unpin hacking, it has possibility to install too legacy version of hacking.
  "hacking >=5.0.0;python_version>='3.8'",
  "invokelint>=0.8.1",
  "mypy",
  "numpy",
  "pylint",
  "pytest",
  "pytest-resource-path",
  "pyvelocity;python_version>='3.9'",
  "radon",
  # To mock requests to prevent slow test
  "requests-mock",
  "ruff>=0.0.17",
  "semgrep;python_version>='3.9' or platform_system=='Linux'",
  "types-defusedxml;python_version>='3.8'",
  "types-invoke",
  "types-requests",
  "types-setuptools>=68.2.0.0",
  "xenon",
]

[project.urls]
homepage = "https://github.com/road-master/radiko-playlist"
# documentation = "https://readthedocs.org"
repository = "https://github.com/road-master/radiko-playlist"
# changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[tool.bandit.assert_used]
skips = ["tests/*"]

[tool.bumpversion]
current_version = "1.2.0"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "radikoplaylist/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.coverage.report]
exclude_also = [
    # Assume `if TYPE_CHECKING: ... else: ...` block is covered · Issue #831 · nedbat/coveragepy
    #   https://github.com/nedbat/coveragepy/issues/831#issuecomment-517778185
    "if TYPE_CHECKING:",
    # Pylint will detect instead:
    # - abstract-method / W0223 - Pylint 2.17.0-dev0 documentation
    #   https://pylint.readthedocs.io/en/latest/user_guide/messages/warning/abstract-method.html
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.docformatter]
recursive = true
# For compatibility with Black
# - How to Configure docformatter — docformatter 1.7.5 documentation
#   https://docformatter.readthedocs.io/en/stable/configuration.html#a-note-on-options-to-control-styles
pre_summary_space = true
wrap-descriptions = 119
wrap-summaries = 119

[tool.flake8]
# @see https://github.com/psf/black/blob/master/README.md#line-length
max_line_length = 108
extend_ignore = [
  # For compatibility with Black:
  # - Using Black with other tools - Black 25.1.0 documentation
  #   https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#bugbear
  "E203",
  "E501",
  "E701",
  # 2025-05-24 Now openstack/hacking wasn't introduced into Ruff and sorting imports is mainly considered with isort.
  "H306",
  # Cohesion may be in experimental.
  "H601",
]
statistics = true
show_source = true
exclude = [
  ".venv",
  "docs",
]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "m3u8"
ignore_missing_imports = true

[tool.pylint.basic]
docstring-min-length = "7"

[tool.pylint.format]
max-line-length = 119

[tool.pylint.options]
# Since this rule against single responsibility principle.
# - python - Why does Pylint want two public methods per class? - Stack Overflow
#   https://stackoverflow.com/questions/28722314/why-does-pylint-want-2-public-methods-per-class/40258006#40258006
min-public-methods = "1"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# log_cli = true
# log_cli_level = "DEBUG"
# log_format = "%(asctime)s %(process)d %(levelname)s %(name)s:%(filename)s:%(lineno)d %(message)s"

[tool.radon]
cc_min = "B"
show_complexity = true
show_mi = true

[tool.ruff]
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # lint.pydocstyle
    # Reason: Docstring may be missed since docstring-min-length is set.
    "D101",    # Missing docstring in public class
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "D105",    # Missing docstring in magic method
    "D106",    # Missing docstring in public nested class
    "D107",    # Missing docstring in __init__
    # Reason: First line may ends with function signature for expression.
    "D402",    # First line should not be the function’s “signature”
    # Reason: First line may ends with ":" for expression.
    "D415",    # First line should end with a period, question mark, or exclamation point
    # Reason: `Line too long` is checked by flake8-bugbear.
    "E501",    # Line too long ({width} > {limit})
]
unfixable = [
    # When fix `return a and b != ""` as `return a and b`, mypy will report warning:
    #   error: Incompatible return value type (got "Union[Literal[False], str]", expected "bool")  [return-value]
    "PLC1901",
]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools]
zip-safe = false

[tool.setuptools.package-data]
"*" = ["py.typed"]
